<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_profile"
        android:orderInCategory="100"
        android:title="@string/action_edit_profile"
        app:showAsAction="never" />
</menu>
